syntax = "proto3";

package viz;

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    string path = 54200;
    string response_type = 54201;
    string response_schema = 54202;
}


message RequestHeader {
    string path = 1;
}

message RequestCommandRecord {
    option (path) = "Command/Record";
    RequestHeader header = 1;
    bool enable = 2;
}

message RequestStatus {
    option (path) = "Status/Status";
    option (response_type) = "Stream";
    option (response_schema) = "Status";
    RequestHeader header = 1;
    uint64 start_time = 2;
    uint64 end_time = 3;
}

message RequestStatusLive {
    option (path) = "Status/Live";
    RequestHeader header = 1;
    bool enable = 2;
}

message RequestImage {
    option (path) = "Image/Image";
    option (response_type) = "Stream";
    option (response_schema) = "ImageData";
    RequestHeader header = 1;
    uint64 start_time = 2;
    uint64 end_time = 3;
    string resource = 4;
    float scale_x = 5;
    float scale_y = 6;
}

message RequestStreamImage {
    option (path) = "Image/StreamImage";
    option (response_type) = "Stream";
    option (response_schema) = "ImageData";
    RequestHeader header = 1;
    uint64 start_time = 2;
    string resource = 3;
    float scale_x = 4;
    float scale_y = 5;
    string client_id = 6;
}

message RequestStopStreamImage {
    option (path) = "Image/StopStreamImage";
    RequestHeader header = 1;
    string client_id = 2;
}
